# api_task

./: .gitignore  README.md  articlesearch-product.yaml  experiment.ipynb  first_take.py  helpers.py  helpers_test.py  nytimes_api.py  nytimes_test.py  pyproject.toml  requirements.txt  response.json  task_requirements.txt
src/nytimes_api/: __init__.py  api.py
tests/: helpers_test.py
